--- a/config.conf
+++ b/config.conf
@@ -20,10 +20,10 @@ INPUT_DIRS=(
 )
 
 # ================= REMOTE DESTINATION =================
-REMOTE_ADDR="127.0.0.1"
+REMOTE_ADDR="207.231.109.18"
 # 207.231.109.18 test
-REMOTE_LOGIN="backups"
-REMOTE_TARGET_DIR="/home/backups/remote_backup"
+REMOTE_LOGIN="seba"
+REMOTE_TARGET_DIR="/home/seba/remote_backup"
 
 # ================= RSYNC FILTERS =================
 RSYNC_FILTERS=(
