--- a/config.conf
+++ b/config.conf
@@ -1,11 +1,11 @@
 # ================= BACKUP IDENTITY =================
-CYCLE_NAME="month"
+CYCLE_NAME="day"
 
 # ================= LOCAL STORAGE =================
-BACKUP_ROOT="/home/shado/bash_project/backup_test/backup"
+BACKUP_ROOT="/home/seba/bashseba"
 ARCHIVE_STORE="${BACKUP_ROOT}/archive"
 WORK_TMP="${BACKUP_ROOT}/tmp"
-LOG_PATH="/home/shado/logs_backup"
+LOG_PATH="/home/seba/logs_backup"
 RUNTIME_LOCK="/var/tmp/backup_runtime.lock"
 
 # ================= DISK SPACE =================
@@ -14,16 +14,16 @@ MIN_FREE_GB=2
 # ================= INPUT DATA =================
 INPUT_DIRS=(
   "/etc"
-  "/home/shado/lib"
-  "/home/shado/repos"
+  "/home/seba/lib"
+  "/home/seba/repos"
   "/srv"
 )
 
 # ================= REMOTE DESTINATION =================
-REMOTE_ADDR="207.231.109.18"
+REMOTE_ADDR="10.0.0.11"
 # 207.231.109.18 test
-REMOTE_LOGIN="seba"
-REMOTE_TARGET_DIR="/home/seba/remote_backup"
+REMOTE_LOGIN="sebaaka"
+REMOTE_TARGET_DIR="/home/sebaaka/remote_backup"
 
 # ================= RSYNC FILTERS =================
 RSYNC_FILTERS=(
